# tissue-to-MRproperty

./: .gitignore  README.md  interactive.ipynb  parcellation_fsl.txt  parcellation_itk.txt  pyproject.toml  requirements.txt  setup.py
cli/: display.py  tissue_to_mr.py
functions/: Volume.py  label.py  volume.py
functions/utils/: get_dic_values.py  select_tool.py  utils.py
test/: test_converter.py
tissue2mrprop/: __init__.py
tissue2mrprop/cli/: __init__.py  display.py  tissue_to_mr.py
tissue2mrprop/functions/: __init__.py  label.py  volume.py
tissue2mrprop/functions/utils/: select_tool.py  utils.py
